--- a/django_app/requirements.txt
+++ b/django_app/requirements.txt
@@ -1,233 +1,7 @@
-adal==1.2.7
-amqp==5.0.6
-anyjson==0.3.3
-appdirs==1.4.4
 asgiref==3.5.2
-attrs==19.3.0
-azure==4.0.0
-azure-applicationinsights==0.1.1
-azure-batch==4.1.3
-azure-common==1.1.28
-azure-core==1.24.1
-azure-cosmosdb-nspkg==2.0.2
-azure-cosmosdb-table==1.0.6
-azure-datalake-store==0.0.52
-azure-eventgrid==1.3.0
-azure-graphrbac==0.40.0
-azure-keyvault==1.1.0
-azure-loganalytics==0.1.1
-azure-mgmt==4.0.0
-azure-mgmt-advisor==1.0.1
-azure-mgmt-applicationinsights==0.1.1
-azure-mgmt-authorization==0.50.0
-azure-mgmt-batch==5.0.1
-azure-mgmt-batchai==2.0.0
-azure-mgmt-billing==0.2.0
-azure-mgmt-cdn==3.1.0
-azure-mgmt-cognitiveservices==3.0.0
-azure-mgmt-commerce==1.0.1
-azure-mgmt-compute==4.6.2
-azure-mgmt-consumption==2.0.0
-azure-mgmt-containerinstance==1.5.0
-azure-mgmt-containerregistry==2.8.0
-azure-mgmt-containerservice==4.4.0
-azure-mgmt-cosmosdb==0.4.1
-azure-mgmt-datafactory==0.6.0
-azure-mgmt-datalake-analytics==0.6.0
-azure-mgmt-datalake-nspkg==3.0.1
-azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==1.0.0
-azure-mgmt-devspaces==0.1.0
-azure-mgmt-devtestlabs==2.2.0
-azure-mgmt-dns==2.1.0
-azure-mgmt-eventgrid==1.0.0
-azure-mgmt-eventhub==2.6.0
-azure-mgmt-hanaonazure==0.1.1
-azure-mgmt-iotcentral==0.1.0
-azure-mgmt-iothub==0.5.0
-azure-mgmt-iothubprovisioningservices==0.2.0
-azure-mgmt-keyvault==1.1.0
-azure-mgmt-loganalytics==0.2.0
-azure-mgmt-logic==3.0.0
-azure-mgmt-machinelearningcompute==0.4.1
-azure-mgmt-managementgroups==0.1.0
-azure-mgmt-managementpartner==0.1.1
-azure-mgmt-maps==0.1.0
-azure-mgmt-marketplaceordering==0.1.0
-azure-mgmt-media==1.0.1
-azure-mgmt-monitor==0.5.2
-azure-mgmt-msi==0.2.0
-azure-mgmt-network==2.7.0
-azure-mgmt-notificationhubs==2.1.0
-azure-mgmt-nspkg==3.0.2
-azure-mgmt-policyinsights==0.1.0
-azure-mgmt-powerbiembedded==2.0.0
-azure-mgmt-rdbms==1.9.0
-azure-mgmt-recoveryservices==0.3.0
-azure-mgmt-recoveryservicesbackup==0.3.0
-azure-mgmt-redis==5.0.0
-azure-mgmt-relay==0.1.0
-azure-mgmt-reservations==0.2.1
-azure-mgmt-resource==2.2.0
-azure-mgmt-scheduler==2.0.0
-azure-mgmt-search==2.1.0
-azure-mgmt-servicebus==0.5.3
-azure-mgmt-servicefabric==0.2.0
-azure-mgmt-signalr==0.1.1
-azure-mgmt-sql==0.9.1
-azure-mgmt-storage==2.0.0
-azure-mgmt-subscription==0.2.0
-azure-mgmt-trafficmanager==0.50.0
-azure-mgmt-web==0.35.0
-azure-nspkg==3.0.2
-azure-servicebus==7.7.0
-azure-servicefabric==6.3.0.0
-azure-servicemanagement-legacy==0.20.7
-azure-storage-blob==1.5.0
-azure-storage-common==1.4.2
-azure-storage-file==1.4.0
-azure-storage-queue==1.4.0
 backports.zoneinfo==0.2.1
-bcrypt==3.1.7
-billiard==3.6.4.0
-blinker==1.4
-Brlapi==0.7.0
-cached-property==1.5.1
-celery==5.0.5
-celery-3==3.1.26.post4
-certifi==2019.11.28
-cffi==1.15.0
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.1.6
-colorama==0.4.3
-command-not-found==0.3
-cryptography==37.0.0
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-defusedxml==0.7.1
-distlib==0.3.1
-distro==1.4.0
-distro-info===0.23ubuntu1
+dj-database-url==1.0.0
 Django==4.1
-django-allauth==0.50.0
-django-debug-toolbar==3.2.2
-django-mongodb-engine @ git+https://github.com/django-nonrel/mongodb-engine@1314786975d3d17fb1a2e870dfba004158a5e431
-django-rest-framework==0.1.0
-djangorestframework==3.11.0
-djangorestframework-simplejwt==5.0.0
-djangotoolbox==1.8.0
-dnspython==2.2.1
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
-future==0.18.2
-gTTS==2.2.2
-gunicorn==20.1.0
-h11==0.9.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.5.0
-isodate==0.6.1
-joblib==1.0.1
-jsonschema==3.2.0
-kazam==1.4.5
-keyring==18.0.1
-kombu==5.0.2
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-mongoengine==0.24.2
-monotonic==1.5
-more-itertools==4.2.0
-msrest==0.7.1
-msrestazure==0.6.4
-netifaces==0.10.4
-nltk==3.6.2
-numpy==1.20.2
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.2.54
-paramiko==2.6.0
-pbr==5.5.1
-pexpect==4.6.0
-Pillow==7.0.0
-playsound==1.2.2
-prompt-toolkit==3.0.18
-protobuf==3.6.1
-psycopg2==2.8.6
-pycairo==1.16.2
-pycparser==2.21
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==2.3.0
-pymacaroons==0.13.0
-pymemcache==3.5.0
-pymongo==4.2.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pytesseract==0.3.7
-python-apt==2.0.0+ubuntu0.20.4.6
-python-crontab==2.5.1
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-snappy==0.6.1
-python3-openid==3.2.0
-pyttsx3==2.90
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-regex==2021.7.6
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-sqlparse==0.3.0
-ssh-import-id==5.10
-stevedore==3.3.0
-stripe==2.74.0
-supervisor==4.1.0
-systemd-python==234
-textblob==0.15.3
-texttable==1.6.2
-tk==0.1.0
-tqdm==4.61.2
-twilio==6.57.0
-typing_extensions==4.2.0
-uamqp==1.5.3
-ubuntu-advantage-tools==27.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-uvicorn==0.11.3
-vine==5.0.0
-virtualenv==20.4.4
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wadllib==1.3.3
-wcwidth==0.2.5
-websocket-client==0.53.0
-websockets==8.1
-wsproto==0.15.0
-xkit==0.0.0
-zipp==1.0.0
+psycopg2-binary==2.9.3
+sqlparse==0.4.2
+whitenoise==6.2.0
